--- a/assets/style.css
+++ b/assets/style.css
@@ -290,3 +290,248 @@ section {
   font-size: 20px;
   font-weight: 600;
 }
+
+:root {
+  --h1: bold 54px/60px var(--ff);
+  --h2: bold 36px/48px var(--ff);
+  --h3: bold 24px/36px var(--ff);
+  --links: 18px/18px var(--ff);
+  --p: 18px/30px var(--ff);
+  --p1: 24px/30px var(--ff);
+  --p2: 36px/48px var(--ff);
+  --subtext: 12px/20px var(--ff);
+  --transition: 0.3s ease-in-out;
+  /* CSS HEX */
+  --primary: #3e51b5;
+  --text: #6b7280;
+  --light: #ccc;
+  --secondary: #2c2c2c;
+}
+
+.w4 {
+  font-weight: 400;
+}
+
+.w5 {
+  font-weight: 500;
+}
+
+.w6 {
+  font-weight: 600;
+}
+
+.w7 {
+  font-weight: 700;
+}
+
+body {
+  background-color: #ffffff;
+}
+
+.full_section {
+  max-width: 800px;
+  padding: 15px;
+  display: block;
+  margin: 0 auto;
+}
+
+.input_field_container {
+  margin: 14px auto;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 12px 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-sizing: border-box;
+  background: transparent;
+  font-size: 0.875rem;
+  color: #6b7280;
+  font-weight: 400;
+}
+
+input:focus,
+select:focus {
+  border-color: #3e51b5;
+}
+
+.submit_btn {
+  width: 100%;
+  background: var(--primary);
+  color: white;
+  padding: 16px 20px;
+  margin: 25px 0;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 700;
+}
+
+button:hover {
+  scale: 1.009;
+}
+
+input[type="submit"]:hover {
+  background-color: #d33500;
+}
+
+label {
+  display: block;
+  font-size: 0.875rem;
+  color: #2c2c2c;
+  font-weight: 500;
+  /* margin-bottom: 10px; */
+}
+
+.error_message {
+  color: red;
+  font-size: 12px;
+  display: block;
+}
+
+.get_location_btn {
+  width: 100%;
+  color: #6b7280;
+  padding: 14px 20px;
+  margin: 10px 0;
+  background-color: transparent;
+  border: rgb(221, 221, 221) 1px solid;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.enter_manually_btn {
+  font-size: 0.875rem;
+  color: #2c2c2c;
+  font-weight: 500;
+}
+
+#add_note_btn_container {
+  font-size: 14px;
+  color: rgb(41, 41, 41);
+  font-weight: 600;
+  cursor: pointer;
+}
+
+img {
+  max-width: 100%;
+}
+
+.page_info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 13px;
+  gap: 5px;
+  text-align: center;
+}
+
+.page_info h2 {
+  font-size: 20px;
+}
+
+.page_info span {
+  font-size: 14px;
+  color: #6b7280;
+}
+
+a {
+  color: #3e51b5;
+  font-weight: 600;
+}
+
+.input_desc {
+  font-size: 12px;
+  color: #6b7280;
+  font-weight: 400;
+  margin-top: -59px;
+}
+
+.need_help_container {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.extra_btn_container {
+  margin: 20px auto;
+}
+
+.or_text {
+  font-size: 14px;
+  color: var(--text);
+  font-weight: 500;
+  margin-top: -11px;
+  background-color: #ffffff;
+  padding: 0px 10px;
+}
+
+hr {
+  border-top: var(--primary);
+}
+
+.secondary_btn {
+  background-color: transparent;
+  border: 1px solid var(--light);
+  color: var(--text);
+  width: 100%;
+  padding: 16px 20px;
+  margin: 25px 0;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 700;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  max-width: 800px;
+  animation: slideIn 0.5s forwards;
+  padding-bottom: 40px;
+
+  /* Add animation */
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateY(100%);
+    /* Start from below the screen */
+    opacity: 0;
+    /* Start invisible */
+  }
+
+  to {
+    transform: translateY(0);
+    /* End in its place */
+    opacity: 1;
+    /* Fully visible */
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .overlay-content {
+    position: fixed;
+    width: 98%;
+    bottom: 0;
+  }
+}
