--- a/assets/style.css
+++ b/assets/style.css
@@ -110,7 +110,7 @@ header {
   align-items: center;
   position: relative;
   z-index: 1000;
-  max-width: 1080px;
+  max-width: 720;
   margin: 0px auto;
 }
 
@@ -239,7 +239,7 @@ header {
 }
 
 main {
-  max-width: 1080px;
+  max-width: 720px;
   margin: 0px auto;
   scroll-snap-type: y mandatory;
 }
@@ -254,7 +254,7 @@ section {
   margin: 20px auto;
   flex-wrap: wrap;
   gap: 20px;
-  max-width: 1080px;
+  max-width: 720px;
 }
 .subsection {
   display: flex;
