--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@
   --colora2: #537fe7;
   --colorbody: #f1f3f5;
   --colors: #333;
+  --colorheading: #2c2c2c;
   --h1: bold 54px/60px var(--ff);
   --h2: bold 36px/48px var(--ff);
   --h3: bold 24px/36px var(--ff);
